--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://XverLxrd.github.io/rick-and-morty-app/",
+  "homepage": "https://XverLxrd.github.io/rick-and-morty-app",
   "name": "elfsight-test-task",
   "version": "1.0.0",
   "private": true,
